--- a/MangaMousouchou.css
+++ b/MangaMousouchou.css
@@ -2,7 +2,8 @@ body {
 	padding: 0;
 	margin: 0;
 }
-.None {
+.None,
+.NONE {
 	display: none;
 }
 div#frame {
@@ -78,6 +79,34 @@ div.MainMenu > div {
 }
 div.TweetRow {
 	height: 1.5em;
+}
+div.TweetHistory {
+	padding: 2px 15px 10px 10px;
+	background-color: #ddd;
+}
+div.TweetHistoryHide {
+	cursor: pointer;
+	padding-bottom: 2px;
+	border: #333 solid 1px;
+	border-width: 0 0 1px 0;
+	margin-bottom: 2px;
+}
+div.TweetHistoryView {
+	padding: 5px;
+	background-color: #f5f5f5;
+	margin-top: 5px;
+	border-radius: 10px;
+}
+div.TweetHistoryViewFooter {
+	background-color: #ccc;
+	padding: 2px;
+	border-radius: 5px;
+}
+div.TweetHistoryViewFooter > span.time {
+	display: inline-block;
+	width: 12em;
+	padding-right: 1em;
+	text-align: right;
 }
 div.Editor {
 	padding: 5px;
